# Foot_Pressure_Sensor

./: CMakeLists.txt  README.md
Arduino Code/: FootSensor.ino
Sensor_Technical_Specs/: 99 zones insoles demo 20190326.rar  sscom33 serial port tool.rar
src/: foot_sensor.cpp  foot_sensor.hpp  imu_store.hpp  main.cpp  matrix_io.hpp  realtimefile_io.cpp  realtimefile_io.hpp  vector_calc.hpp
